crop/gap image fix

--- a/src/app/profile/components/profile-index/profile-index.component.scss
+++ b/src/app/profile/components/profile-index/profile-index.component.scss
@@ -9,7 +9,7 @@
         float: left;
         height: 160px;
         width: 160px;
-        padding-right: 32px;
+        margin-right: 32px;
     }
     &_user_data{
         margin: auto 0;
