--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,9 +9,10 @@ body {
     color: white;
 }
 .avatar{
-    border-radius: 100%;
+    border-radius: 50%;
     height: 48px;
     width: 48px;
+    object-fit: cover;
 }
 .full-width{
     width: 100%;
